src/objects/Purchase__c.object
<CustomObject>
    <description>Purchase Cuisine</description>
    <fields>
        <fullName>AccountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計</label>
        <referenceTo>AccountAcount__c</referenceTo>
        <relationshipLabel>仕入</relationshipLabel>
        <relationshipName>PAccountRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountTimeStamp__c</fullName>
        <label>会計日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DenpyoukeiIncTax__c</fullName>
        <label>計(税込)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Denpyoukei__c</fullName>
        <inlineHelpText>伝票の合計金額を税抜きにて入力してください。</inlineHelpText>
        <label>計(税抜)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventSource__c</fullName>
        <label>発生源</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>画面</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>JinyaRevenue__r.Salesday__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>仕入日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsLockFlg__c</fullName>
        <formula>JinyaRevenue__r.IsLockFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ロックフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JinyaRevenue__c</fullName>
        <inlineHelpText>仕入日を半角数字の８桁で入力してください、たとえば、20110103と！</inlineHelpText>
        <label>仕入日</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipName>PurchaseG9AK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KamokuLst__c</fullName>
        <label>科目</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>現金</fullName>
                </value>
                <value>
                    <fullName>買掛（月末振込）</fullName>
                </value>
                <value>
                    <fullName>買掛（都度振込）</fullName>
                </value>
                <value>
                    <fullName>事前振込</fullName>
                </value>
                <value>
                    <fullName>クレジットカード</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ご予約</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>仕入(標準)</relationshipLabel>
        <relationshipName>PurLeadRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>摘要</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NoTaxFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>税対象外</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PsalesproductRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>仕入</relationshipLabel>
        <relationshipName>PsalesproductRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseType__c</fullName>
        <inlineHelpText>仕入のカテゴリ別仕入高を計上のため、必ず入力してください。</inlineHelpText>
        <label>種別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>通常</fullName>
                    <default>true</default>
                    <label>通常</label>
                </value>
                <value>
                    <fullName>ブライダルフェア用</fullName>
                </value>
                <value>
                    <fullName>研究用</fullName>
                </value>
                <value>
                    <fullName>材料仕入</fullName>
                </value>
                <value>
                    <fullName>売店仕入</fullName>
                </value>
                <value>
                    <fullName>飲料仕入</fullName>
                </value>
                <value>
                    <fullName>室料経費</fullName>
                </value>
                <value>
                    <fullName>ブライダル仕入</fullName>
                </value>
                <value>
                    <fullName>旅館外注費</fullName>
                </value>
                <value>
                    <fullName>役員報酬</fullName>
                </value>
                <value>
                    <fullName>給与手当</fullName>
                </value>
                <value>
                    <fullName>雑給</fullName>
                </value>
                <value>
                    <fullName>法定福利費</fullName>
                </value>
                <value>
                    <fullName>福利厚生費</fullName>
                </value>
                <value>
                    <fullName>旅費交通費</fullName>
                </value>
                <value>
                    <fullName>通信費</fullName>
                </value>
                <value>
                    <fullName>接待交際費</fullName>
                </value>
                <value>
                    <fullName>減価償却費</fullName>
                </value>
                <value>
                    <fullName>販売手数料</fullName>
                </value>
                <value>
                    <fullName>保険料</fullName>
                </value>
                <value>
                    <fullName>修繕費</fullName>
                </value>
                <value>
                    <fullName>消耗品費</fullName>
                </value>
                <value>
                    <fullName>設備消耗品</fullName>
                </value>
                <value>
                    <fullName>支払手数料</fullName>
                </value>
                <value>
                    <fullName>広告宣伝費</fullName>
                </value>
                <value>
                    <fullName>租税公課</fullName>
                </value>
                <value>
                    <fullName>諸会費</fullName>
                </value>
                <value>
                    <fullName>研究研修費</fullName>
                </value>
                <value>
                    <fullName>地代</fullName>
                </value>
                <value>
                    <fullName>リース料</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchasesource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>仕入先</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PurchaseXVFe</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipLabel>仕入</relationshipLabel>
        <relationshipName>PShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusLst__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>申請</fullName>
                    <default>true</default>
                    <label>申請</label>
                </value>
                <value>
                    <fullName>処理済</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxRateCal__c</fullName>
        <formula>IF (TaxRate__c == 0 , 0.08, TaxRate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$消費税</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>消費税</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <label>仕入(標準)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Purchase#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>